--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,3 +11,8 @@ services:
       - YOOMONEY_PROVIDER_TOKEN=${YOOMONEY_PROVIDER_TOKEN}
       - STUDENTS_CHAT_ID=${STUDENTS_CHAT_ID}
     restart: unless-stopped
+    healthcheck:
+      test: ["CMD", "python", "-c", "import requests; requests.get('https://api.telegram.org/bot${BOT_TOKEN}/getMe')"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
