--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,18 +24,96 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Set up SSH key with passphrase
+        env:
+          SSH_AUTH_SOCK: /tmp/ssh_agent.sock
         run: |
+          # Start SSH agent
+          ssh-agent -a $SSH_AUTH_SOCK > /dev/null
+          
+          # Create .ssh directory with correct permissions
           mkdir -p ~/.ssh
+          chmod 700 ~/.ssh
+          
+          # Write the private key to a file
           echo "${{ secrets.SSH_PRIVATE_KEY }}" > ~/.ssh/deploy_key
           chmod 600 ~/.ssh/deploy_key
-          eval $(ssh-agent -s)
-          echo "${{ secrets.SSH_KEY_PASSPHRASE }}" | SSH_ASKPASS=/bin/cat ssh-add ~/.ssh/deploy_key
-          echo "StrictHostKeyChecking no" > ~/.ssh/config
+          
+          # Write known hosts
+          echo "${{ secrets.SSH_HOST }} $(ssh-keyscan -t ed25519 ${{ secrets.SSH_HOST }} 2>/dev/null)" >> ~/.ssh/known_hosts
+          chmod 600 ~/.ssh/known_hosts
+          
+          # Add the key to SSH agent with passphrase
+          expect << 'EOF'
+            spawn ssh-add ~/.ssh/deploy_key
+            expect "Enter passphrase"
+            send "${{ secrets.SSH_KEY_PASSPHRASE }}\r"
+            expect eof
+EOF
 
       - name: Test SSH Connection
+        env:
+          SSH_AUTH_SOCK: /tmp/ssh_agent.sock
         run: |
           echo "Testing SSH connection..."
-          ssh -i ~/.ssh/deploy_key -v ${{ secrets.SSH_USERNAME }}@${{ secrets.SSH_HOST }} "echo 'SSH connection successful!'"
+          ssh -v ${{ secrets.SSH_USERNAME }}@${{ secrets.SSH_HOST }} "echo 'SSH connection successful!'"
+name: Deploy Telegram Bot
+
+on:
+  push:
+    branches: [ main ]
+  workflow_dispatch:
+    inputs:
+      environment:
+        description: 'Environment to deploy to'
+        required: true
+        default: 'production'
+        type: choice
+        options:
+        - production
+        - staging
+
+jobs:
+  deploy:
+    runs-on: ubuntu-latest
+    environment: ${{ github.event.inputs.environment || 'production' }}
+    
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
+      - name: Set up SSH key with passphrase
+        env:
+          SSH_AUTH_SOCK: /tmp/ssh_agent.sock
+        run: |
+          # Start SSH agent
+          ssh-agent -a $SSH_AUTH_SOCK > /dev/null
+          
+          # Create .ssh directory with correct permissions
+          mkdir -p ~/.ssh
+          chmod 700 ~/.ssh
+          
+          # Write the private key to a file
+          echo "${{ secrets.SSH_PRIVATE_KEY }}" > ~/.ssh/deploy_key
+          chmod 600 ~/.ssh/deploy_key
+          
+          # Write known hosts
+          echo "${{ secrets.SSH_HOST }} $(ssh-keyscan -t ed25519 ${{ secrets.SSH_HOST }} 2>/dev/null)" >> ~/.ssh/known_hosts
+          chmod 600 ~/.ssh/known_hosts
+          
+          # Add the key to SSH agent with passphrase
+          expect << 'EOF'
+            spawn ssh-add ~/.ssh/deploy_key
+            expect "Enter passphrase"
+            send "${{ secrets.SSH_KEY_PASSPHRASE }}\r"
+            expect eof
+EOF
+
+      - name: Test SSH Connection
+        env:
+          SSH_AUTH_SOCK: /tmp/ssh_agent.sock
+        run: |
+          echo "Testing SSH connection..."
+          ssh -v ${{ secrets.SSH_USERNAME }}@${{ secrets.SSH_HOST }} "echo 'SSH connection successful!'"
 
       - name: Set up Python
         uses: actions/setup-python@v4
