--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,51 +23,59 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Set up SSH
+      - name: Configure SSH
         run: |
-          # Create .ssh directory with proper permissions
+          # Create .ssh directory
           mkdir -p ~/.ssh
           chmod 700 ~/.ssh
           
-          # Create empty key file first with proper permissions
-          touch ~/.ssh/id_rsa
+          # Write SSH key
+          echo "${{ secrets.SSH_PRIVATE_KEY }}" > ~/.ssh/id_rsa
           chmod 600 ~/.ssh/id_rsa
           
-          # Write the key content
-          echo "${{ secrets.SSH_PRIVATE_KEY }}" > ~/.ssh/id_rsa
-          
-          # Create and secure config file
-          touch ~/.ssh/config
-          chmod 600 ~/.ssh/config
-          echo "Host *
-            IdentityFile ~/.ssh/id_rsa
-            StrictHostKeyChecking no
-            UserKnownHostsFile ~/.ssh/known_hosts" > ~/.ssh/config
-          
-          # Create and secure known_hosts
-          touch ~/.ssh/known_hosts
+          # Write known hosts directly
+          echo "${{ secrets.SSH_HOST }} $(ssh-keyscan ${{ secrets.SSH_HOST }} 2>/dev/null | grep -v '^#')" > ~/.ssh/known_hosts
           chmod 600 ~/.ssh/known_hosts
           
-          # Add host key to known_hosts
-          ssh-keyscan -H ${{ secrets.SSH_HOST }} >> ~/.ssh/known_hosts
+          # Create strict SSH config
+          cat > ~/.ssh/config << EOF
+          Host ${{ secrets.SSH_HOST }}
+            HostName ${{ secrets.SSH_HOST }}
+            User ${{ secrets.SSH_USERNAME }}
+            IdentityFile ~/.ssh/id_rsa
+            StrictHostKeyChecking accept-new
+            UserKnownHostsFile ~/.ssh/known_hosts
+          EOF
+          chmod 600 ~/.ssh/config
           
-          # Start SSH agent
-          eval "$(ssh-agent -s)"
-          
-          # Add key to agent (without passphrase for now)
-          ssh-add ~/.ssh/id_rsa
+          # Debug: Show SSH files
+          ls -la ~/.ssh/
 
       - name: Test SSH Connection
         run: |
-          # Test connection with verbose output
-          ssh -v ${{ secrets.SSH_USERNAME }}@${{ secrets.SSH_HOST }} "echo 'SSH connection successful!'"
+          # First, verify the host key
+          ssh-keyscan -H ${{ secrets.SSH_HOST }}
+          
+          # Then test connection with detailed output
+          ssh -vvv ${{ secrets.SSH_USERNAME }}@${{ secrets.SSH_HOST }} "echo 'Connection test successful'"
+
+      - name: Deploy to VPS
+        if: success()
+        run: |
+          echo "Creating project directory on VPS..."
+          ssh ${{ secrets.SSH_USERNAME }}@${{ secrets.SSH_HOST }} "mkdir -p ~/anna-telegram-bot"
+          
+          echo "Syncing repository to VPS..."
+          rsync -avz --delete \
+            --exclude='.env' \
+            --exclude='media/*' \
+            --exclude='data/*' \
+            ./ ${{ secrets.SSH_USERNAME }}@${{ secrets.SSH_HOST }}:~/anna-telegram-bot/
 
       - name: Cleanup
         if: always()
         run: |
-          rm -f ~/.ssh/id_rsa
-          rm -f ~/.ssh/config
-          rm -f ~/.ssh/known_hosts
+          rm -rf ~/.ssh/
 
       - name: Deploy to VPS
         env:
