--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -86,4 +86,4 @@ jobs:
         if: always()
         run: |
           echo "Cleaning up sensitive files..."
-          rm -f ~/.ssh/
+          rm -rf ~/.ssh/
