--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 services:
   telegram-bot:
     build: .
@@ -12,6 +10,7 @@ services:
       - STUDENTS_CHAT_ID=${STUDENTS_CHAT_ID}
     restart: unless-stopped
     healthcheck:
-      test: ["CMD", "python", "-c", "import sys; import requests; try: r = requests.get('https://api.telegram.org/bot' + open('/app/.env').read().split('BOT_TOKEN=')[1].split('\\n')[0] + '/getMe'); sys.exit(0 if r.status_code == 200 else 1) except Exception: sys.exit(1)"]      interval: 30s
+      test: ["CMD", "python", "/app/healthcheck.py"]
+      interval: 30s
       timeout: 10s
       retries: 3
