--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -60,6 +60,7 @@ jobs:
           rsync -avz --delete \
             --exclude='.env' \
             --exclude='media/*' \
+            --exclude='data/*' \
             ./ ${{ secrets.SSH_USERNAME }}@${{ secrets.SSH_HOST }}:~/anna-telegram-bot/
 
       - name: Setup and start bot
